@@ -1,22 +1,25 @@
-| OS         | Python 2.7 | Python 3.3 | Notes                            |
-+------------+------------+------------+----------------------------------+
-| Windows    |     X      |            | Python(xy) with OpenJPEG 1.5.1.  |
-|            |            |            | At least 25 tests should pass    |
-+------------+------------+------------+----------------------------------+
-| Mac        |     X      |            | MacPorts with both OpenJPEG 1.5.1|
-|            |            |            | and OpenJPEG svn.  Maximum number|
-|            |            |            | of tests should pass.            |
-+------------+------------+------------+----------------------------------+
-| Mac        |            |     X      | MacPorts with both OpenJPEG 1.5.1|
-|            |            |            | and OpenJPEG svn.  Maximum number|
-|            |            |            | of tests should pass.            |
-+------------+------------+------------+----------------------------------+
-| Raspberry  |     X      |            | Ships with only 1.3.  Should     |
-|            |            |            | error out gracefully.            |
-+------------+------------+------------+----------------------------------+
-| Fedora 17  |     X      |            | Ships with 1.4.  Should error out|
-|            |            |            | gracefully.                      |
-+------------+------------+------------+----------------------------------+
-| Fedora 18  |            |     X      | Ships with 1.5.1.  Some tests    |
-|            |            |            | should pass.                     |
-+------------+------------+------------+----------------------------------+
+| OS         | Python 2.7 | Python 3.3 | Notes                                |
++------------+------------+------------+--------------------------------------+
+| Windows    |     X      |            | Python(xy) with OpenJPEG 1.5.1.      |
+|            |            |            | At least 25 tests should pass        |
++------------+------------+------------+--------------------------------------+
+| Mac        |     X      |            | MacPorts with both OpenJPEG 1.5.1    |
+|            |            |            | and OpenJPEG svn.  370 of 450 tests  |
+|            |            |            | should pass.                         |
++------------+------------+------------+--------------------------------------+
+| Mac        |            |     X      | MacPorts with both OpenJPEG 1.5.1    |
+|            |            |            | and OpenJPEG svn.  390 of 450        |
+|            |            |            | tests should pass.                   |
++------------+------------+------------+--------------------------------------+
+| Raspberry  |     X      |            | Ships with only 1.3.  Should         |
+|            |            |            | error out gracefully.                |
++------------+------------+------------+--------------------------------------+
+| Fedora 17  |     X      |            | Ships with 1.4.  Should error out    |
+|            |            |            | gracefully.                          |
++------------+------------+------------+--------------------------------------+
+| Fedora 18  |            |     X      | Ships with 1.5.1.  Some tests        |
+|            |            |            | should pass.                         |
++------------+------------+------------+--------------------------------------+
+
+Pylint on entire package should be at least 0.95.
+pep8 should be pass cleanly.
