@@ -1,3 +1,5 @@
+Jul 11, 2013 - v0.2.0  Support for Python 2.7 on windows, OpenJPEG 1.5.1.
+
 Jun 27, 2013 - v0.1.10  Can wrap codestreams in custom JP2 jackets.  Exposing
     parameter to specify multi component transform.  Added a raw codestream 
     file.
